--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
             align-items: center;
             background-color: #f0f0f0;
             font-family: sans-serif;
-            font-size: 24px;
+            font-size: 30px;
         }
     </style>
 </head>
 <body>
     <div>我去不早说</div>
+    <div>请输入文本</div>
 </body>
 </html>
