--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>不知道</title>
+    <title>空白页面</title>
     <style>
         body {
             margin: 0;
             height: 100vh;
             display: flex;
+            flex-direction: column; /* 垂直排列 */
             justify-content: center;
             align-items: center;
             background-color: #f0f0f0;
             font-family: sans-serif;
-            font-size: 30px;
+            font-size: 24px;
+        }
+        .second-line {
+            margin-top: 10px;
+            font-size: 18px;
+            color: #666;
         }
     </style>
 </head>
 <body>
     <div>我去不早说</div>
+    <div class="second-line">请输入文本</div>
 </body>
 </html>
